# arnold-usd

./: .dummy  .gitattributes  .gitignore  .gitmodules  .hgignore  3161.patch  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  README.md  SConstruct  abuild  abuild.bat  dependencies.json  testrender.tif
arv/: SConscript
contrib/: custom.py
contrib/extensions/: ReadMeHackWorkDescription.txt
contrib/extensions/bifrost/procedural/: CMakeLists.txt  Loader.cpp  bifrostAeroProcedural.cpp  bifrost_implicit.cpp  bifrost_parameters.cpp  bifrost_parameters.h  bifrost_points.cpp  bifrost_polymesh.cpp  bifrost_shape.h  bifrost_surface.cpp  bifrost_surface.h  bifrost_volume.cpp  blocks.cpp  blocks.h  debug.h  defs.h  implicit.cpp  implicit.h  loader.cpp  points.cpp  points.h  points_parameters.cpp  points_parameters.h  polymesh.cpp  polymesh.h  sampler.cpp  sampler.h  shape.h  surface.cpp  surface.h  surface_parameters.cpp  surface_parameters.h  tbb.cpp  tbb.h  utils.cpp  utils.h  volume.cpp  volume.h
contrib/extensions/bifrost/procedural/BifrostImplicits/: BifrostImplicits.cpp
contrib/extensions/bifrost/procedural/BifrostPolyMesh/: BifrostPolyMesh.cpp
contrib/extensions/bifrost/procedural/BifrostPrimitives/: BifrostPrimitives.cpp
contrib/extensions/bifrost/procedural/BifrostVolume/: BifrostVolume.cpp
contrib/extensions/bifrost/procedural/bifrostprocessing/: bifrostprocessing_extend.cpp  bifrostprocessing_filters.cpp  bifrostprocessing_intersector.cpp  bifrostprocessing_marchingcubes.cpp  bifrostprocessing_mixer.cpp  bifrostprocessing_mixers.cpp  bifrostprocessing_points.cpp  bifrostprocessing_shape.cpp  bifrostprocessing_surface.cpp  bifrostprocessing_tools.cpp  bifrostprocessing_visitors.cpp  bifrostprocessing_volume.cpp  defs.h  tbb.cpp  tbb.h  utils.cpp  utils.h
contrib/extensions/bifrost/procedural/bifrostprocessing/api/bifrostprocessing/: bifrostprocessing_decl.h  bifrostprocessing_extend.h  bifrostprocessing_filters.h  bifrostprocessing_intersector.h  bifrostprocessing_meshing.h  bifrostprocessing_mixers.h  bifrostprocessing_points.h  bifrostprocessing_shape.h  bifrostprocessing_surface.h  bifrostprocessing_tools.h  bifrostprocessing_visitors.h  bifrostprocessing_volume.h
contrib/extensions/bifrost/procedural/common/include/: AIPrimitivesTools.h  AITools.h  AITypes.h  Implicit.h  PrimitivesTools.h  Tools.h  Types.h
contrib/extensions/bifrost/procedural/common/src/: AIPrimitivesTools.cpp  AITools.cpp  AITypes.cpp  Implicit.cpp  PrimitivesTools.cpp  Tools.cpp  Types.cpp
contrib/extensions/bifrost_shaders/plugin/: BifrostMayaShadersTranslator.cpp  BifrostMayaShadersTranslator.h  CMakeLists.txt  TranslatorUtils.h  new_bifrost_shaders_translators.py  plugin.cpp
contrib/extensions/bifrost_shaders/shaders/: CMakeLists.txt  loader.cpp
contrib/extensions/bifrost_shaders/shaders/BifrostAero/: BifrostAero.cpp  BlackBody.h
contrib/extensions/bifrost_shaders/shaders/BifrostHydro/: BifrostHydro.cpp  Hydro3rdParty.h  HydroDefs.h  HydroMIS.h  HydroTypes.h
contrib/extensions/bifrost_shaders/shaders/BifrostPoint/: BifrostPoint.cpp  PointBRDF.h  PointDefs.h  PointUtils.h
contrib/scripts/: fix_stray_chars.py  make_mtd.py  spdl_to_xml.py  spdl_to_yaml.py  upgrade_04_to_05.py
docs/: HOW_TO_INSTALL.txt  readme.txt
docs/doxygen_api/: Doxyfile  SConscript
icons/: render_ArnoldDisplacementShader.xpm  render_ArnoldStandardShader.xpm
installer/: MtoA.nsi  MtoA2011.nsi  MtoA2012.nsi  MtoA2013.5.nsi  MtoA2013.nsi  MtoA20135.nsi  MtoA2014.nsi  MtoA2015.nsi  MtoAEULA.txt  MtoA_2013.5_Installer.pkgproj  MtoA_2013_Installer.pkgproj  MtoA_2014_Installer.pkgproj  MtoA_2015_Installer.pkgproj  MtoA_20165_Installer.pkgproj  MtoA_2016_Installer.pkgproj  MtoA_2017_Installer.pkgproj  MtoA_2018_Installer.pkgproj  MtoA_2019_Installer.pkgproj  MtoA_2020_Installer.pkgproj  MtoA_2021_Installer.pkgproj  MtoA_2022_Installer.pkgproj  MtoA_2023_Installer.pkgproj  MtoA_2024_Installer.pkgproj  MtoA_2025_Installer.pkgproj  SConscript  pitreg_script.sh  unix_installer.py  unix_installer.sh
libs/common/: common_utils.h  constant_strings.h  materials_utils.cpp  materials_utils.h  parameters_utils.cpp  rendersettings_utils.cpp
libs/render_delegate/: light.cpp  node_graph.cpp  node_graph.h  render_delegate.cpp  render_delegate.h
plugins/mtoa/: ArnoldAssTranslator.cpp  ArnoldAssTranslator.h  ArnoldExportAssCmd.cpp  ArnoldExportAssCmd.h  ArnoldIprCmd.cpp  ArnoldIprCmd.h  ArnoldPluginCmd.cpp  ArnoldPluginCmd.h  ArnoldRenderCmd.cpp  ArnoldRenderCmd.h  Main.cpp  MayaScene.cpp  MayaScene.h  OutputDriver.cpp  RenderCmd.cpp  RenderCmd.h  RenderInstance.cpp  RenderInstance.h  RenderOptions.cpp  RenderOptions.h  SConscript  (+5 more)
procedural/: main.cpp
procedurals/: SConscript
schemas/: SConscript
scripts/: AEArnoldAOVTemplate.mel  AEArnoldAmbientOcclusionShaderTemplate.mel  AEArnoldBackgroundImageShaderTemplate.mel  AEArnoldBarndoorShaderTemplate.mel  AEArnoldCustomShapeAttributes.mel  AEArnoldDisplacementShaderTemplate.mel  AEArnoldFogShaderTemplate.mel  AEArnoldGoboShaderTemplate.mel  AEArnoldHairShaderTemplate.mel  AEArnoldLightBlockerShaderTemplate.mel  AEArnoldLightDecayShaderTemplate.mel  AEArnoldLightFiltersTemplate.mel  AEArnoldShapeTemplate.mel  AEArnoldSkyShaderTemplate.mel  AEArnoldStandardShaderTemplate.mel  AEArnoldUtilityShaderTemplate.mel  AEArnoldVolumeScatteringShaderTemplate.mel  AEArnoldWireframeShaderTemplate.mel  ArnoldAOVEditor.mel  ArnoldCustomAttrs.mel  ArnoldExportAss.mel  ArnoldFixLightFilters.mel  ArnoldRender.mel  CreateArnoldRendererCommonGlobalsTab.mel  CreateArnoldRendererGlobalsTab.mel  RegisterArnoldRenderer.mel  SetupArnoldGlobalsTabs.mel  ShaderFunctions.mel  UnregisterArnoldRenderer.mel  arnoldRenderer.xml
shaders/: mtoa_shaders.mtd
site_scons/: build_tools.py
testsuite/: SConscript  groups
usd/: SConscript  Sconscript  mayaUsdRegistry.cpp  mayaUsdRegistry.h  usdArnoldShaderWriter.h
(+4461 files in other folders)
